--- a/fitness-tracker-backend/application.properties
+++ b/fitness-tracker-backend/application.properties
@@ -1,5 +1,21 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+# ===============================
+# = DataSource configuration
+# ===============================
+spring.datasource.url=jdbc:h2:mem:fitnesstrackerdb
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=secret
+spring.datasource.password=
+
+# ===============================
+# = H2 Console
+# ===============================
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# ===============================
+# = JPA / Hibernate
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
