--- a/fitness-tracker-backend/src/main/resources/application.properties
+++ b/fitness-tracker-backend/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.password=
 # ===============================
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 
 # ===============================
 # = JPA / Hibernate
