--- a/fitness-tracker-frontend/package.json
+++ b/fitness-tracker-frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
 "scripts": {
   "ng": "ng",
-  "start": "ng serve --proxy-config proxy.conf.json",
+  "start": "ng serve",
   "build": "ng build",
-  "watch": "ng build --watch --configuration development",
+  "watch": "ng build",
   "test": "ng test"
   }
 ,
