--- a/fitness-tracker-frontend/tsconfig.json
+++ b/fitness-tracker-frontend/tsconfig.json
@@ -3,6 +3,17 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "exercises-lib": [
+        "./projects/exercises-lib/src/public-api"
+      ],
+      "plans-lib": [
+        "./projects/plans-lib/src/public-api"
+      ],
+      "sessions-lib": [
+        "./projects/sessions-lib/src/public-api"
+      ]
+    },
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -29,6 +40,24 @@
     },
     {
       "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/exercises-lib/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/exercises-lib/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/plans-lib/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/plans-lib/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/sessions-lib/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/sessions-lib/tsconfig.spec.json"
     }
   ]
 }
