--- a/fitness-tracker-frontend/package.json
+++ b/fitness-tracker-frontend/package.json
@@ -31,6 +31,7 @@
     "@angular/material": "^20.2.13",
     "@angular/platform-browser": "^20.3.12",
     "@angular/router": "^20.3.12",
+    "gsap": "^3.13.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
