--- a/fitness-tracker-frontend/angular.json
+++ b/fitness-tracker-frontend/angular.json
@@ -223,6 +223,36 @@
           }
         }
       }
+    },
+    "workouts-lib": {
+      "projectType": "library",
+      "root": "projects/workouts-lib",
+      "sourceRoot": "projects/workouts-lib/src",
+      "prefix": "workout",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:ng-packagr",
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/workouts-lib/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/workouts-lib/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "projects/workouts-lib/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
     }
   },
   "cli": {
