--- a/fitness-tracker-frontend/projects/plans-lib/tsconfig.lib.json
+++ b/fitness-tracker-frontend/projects/plans-lib/tsconfig.lib.json
@@ -8,7 +8,18 @@
     "declarationMap": true,
     "sourceMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "paths": {
+      "common-lib": [
+        "../../dist/common-lib"
+      ],
+      "sessions-lib": [
+        "../../dist/sessions-lib"
+      ],
+      "exercises-lib": [
+        "../../dist/exercises-lib"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts"
