--- a/fitness-tracker-frontend/projects/workouts-lib/tsconfig.lib.json
+++ b/fitness-tracker-frontend/projects/workouts-lib/tsconfig.lib.json
@@ -6,7 +6,12 @@
     "declarationMap": true,
     "sourceMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "paths": {
+      "common-lib": [
+        "../../dist/common-lib"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts"
@@ -15,5 +20,3 @@
     "**/*.spec.ts"
   ]
 }
-
-
